<resources>
    <string name="app_name">Cryptoh</string>
    <string name="hint_password">Password</string>
    <string name="hint_text">Text</string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_decrypt">Decrypt</string>
    <string name="error_password">No password or password is too short.</string>
    <string name="error_text">No text entered or in clipboard.</string>
    <string name="message_send">Send encrypted text</string>
    <string name="explanation">Enter your text which should be en- or decrypted in the upper field, then enter the password in the bottom field (min. 8 letters) and touch the appropriate button.\nIf there is no text in the textfield, the clipboard content will be used.\n\nThe app uses a simple but effective implementation of Blowfish. <b>But even the safest encryption algorithm is useless if the password gets in the wrong hands or is not changed frequently!</b></string>
    <string name="about">About</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="action_encryption">Action after encryption</string>
    <string name="error_blowfish">Decrypting crashed - bad password?</string>
    <string-array name="actions_after_encryption">
        <item>"Share text with chooser"</item>
        <item>"Share text without chooser"</item>
        <item>"Clip text to clipboard"</item>
        <item>"No action"</item>
    </string-array>
    <string-array name="actions_encryption_short">
        <item>"ShareTextWithChooser"</item>
        <item>"ShareTextWithoutChooser"</item>
        <item>"ClipTextToClipboard"</item>
        <item>"NoAction"</item>
    </string-array>
</resources>
